Upgrade Coherence Demo to use Coherence CE (#13)
Upgrade Coherence Demo to use Coherence CE